<resources>
    <string name="app_name">CS Mobile Application</string>
    <!-- strings related to the login activity-->

    <string name="forgotPwd">Forgot Password?</string>
    <string name="signup">Create Account</string>

    <string name="login">Login</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (required)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_menu_list">Menu</string>
    <string name="title_menu_detail">Menu Detail</string>
    <string name="title_menuitem_list">MenuItems</string>
    <string name="title_menuitem_detail">MenuItem Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>


    <!--strings related to create account 1-->
    <string name="insertId">Insert Identification Number</string>
    <!--strings related to create account 2-->
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="CreateUserName">Create Username</string>
    <string name="CreatePwd">Create Password</string>

    <!-- strings related to forgot password page-->
    <string name="EnterUsername">Enter your user name</string>
    <string name="forgotPwdText">Using the Email you provieded last time,  new reset password will be sent.This might take few
          minutes.Please wait until email is received.</string>

    <!-- strings related to propose news form-->
    <string name="newsTitle">News Title</string>
    <string name="newsDescription">Short description of the news</string>
    <string name="attachNews">Attach News</string>
    <string name="proposedBy">Proposed by:</string>

    <!--strings related to propose notice form-->
    <string name="noticeTitle">Notice Title</string>
    <string name="attachNotice">Attach Notice</string>
    <string name="noticeContent">Notice Content (optional)</string>
    <string name="proposedByn">Proposed By:</string>

    <!--login retrofit consumption-->

    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>


</resources>
