<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user1.csmobileappii.ProposeNoticeActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="9dp"
        android:padding="14dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticeTitle"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/notice_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Title of notice goes here  " />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attachNotice"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/editText15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/attachNotice" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticeContent"
            android:textSize="17dp"/>

        <MultiAutoCompleteTextView
            android:id="@+id/notice_content"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:hint="Notice content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proposedByn"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/proposed_byNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Name or username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"

            android:id="@+id/required_field_notice"/>

        <Button
            android:id="@+id/submit_notice_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />

    </LinearLayout>

</RelativeLayout>
