<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user1.csmobileappii.ProposeNewsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="9dp"
        android:padding="14dp"
        >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newsTitle"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="News titles goes here" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newsDescription"
            android:textSize="16dp"/>

        <MultiAutoCompleteTextView
            android:id="@+id/news_desription"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:hint="Put short description about the news content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attachNews"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/news_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="url of the news" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proposedBy"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/proposed_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="username" />

        <TextView
            android:id="@+id/required_field_PN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/submit_news_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />
    </LinearLayout>


</RelativeLayout>
